correction height collapse content

--- a/src/sass/_collapse.scss
+++ b/src/sass/_collapse.scss
@@ -157,6 +157,7 @@
 
             .collapse-content {
                 height: auto;
+                margin: 5px;
 
                 ul {
                     
